--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
-    "vue": "^3.4.37"
+    "axios": "^1.7.5",
+    "vue": "^3.4.37",
+    "vue-axios": "^3.5.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
